[package]
name = "nftroll"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cw0 = { version = "0.10.3" } 
cw2 = { version = "0.13.2" } 
cw20 = {version = "0.13.2"}
cw20-base = {version = "0.13.2", features = ["library"]}
cw-storage-plus  = { version = "0.13.2" } 
cosmwasm-std = { version = "1.0.0" }
schemars = "0.8.10"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = "1.0.51"
cosmwasm-schema = "1.0.0"
serde_json = "1.0"
cw721 = "0.18.0"